samples/_failures_safe/1761561965_56032d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f9c1850.c: In function ‘main’:
./samples/SAFE/__tmp_5f9c1850.c:138:5: error: expected declaration or statement at end of input
  138 |     }
      |     ^
